# DoorSense

./: .gitignore  README.md
esp32-client/TCPClient/include/: imageprocessing.h  protocol.hpp
esp32-client/TCPClient/src/: imageprocessing.cpp  main.cpp
server/: CMakeLists.txt  CMakelists.txt
server/include/: protocol.hpp
server/src/: main.cpp
